# test-neuro-data-platform

./: .editorconfig  .env.example  .gitignore  Dockerfile.typescript  README.md  docker-compose.override.yml  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  pyproject.toml
.github/workflows/: ci-python.yml  ci-typescript.yml
apps/bids-exporter/: .env.example  Dockerfile  pyproject.toml
apps/bids-exporter/src/: config.py  main.py  storage.py  worker.py
apps/collector/: package.json  tsconfig.json
apps/collector/src/: index.ts  rabbitmq.ts  routes.ts
apps/datalinker/: .env.example  package.json  tsconfig.json
apps/datalinker/src/: db.ts  index.ts  linker.ts
apps/media-processor/: .env.example  Dockerfile  package.json  tsconfig.json
apps/media-processor/src/: config.ts  index.ts  processor.ts  services.ts
apps/processor/: .env.example  Dockerfile  pyproject.toml
apps/processor/src/: config.py  main.py  parser.py  storage.py
apps/realtime-analyzer/: .env.example  Dockerfile  pyproject.toml
apps/realtime-analyzer/src/: analyzer.py  config.py  consumer.py  data_store.py  main.py
apps/session-manager/: .env.example  package.json  tsconfig.json
apps/session-manager/src/: index.ts  rabbitmq.ts  routes.ts
db/: init.sql
nginx/: Dockerfile  nginx.conf
